#[[
SPDX-License-Identifier: MPL-2.0

This file is part of Ramses Composer
(see https://github.com/GENIVI/ramses-composer).

This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
If a copy of the MPL was not distributed with this file, You can obtain one at http://mozilla.org/MPL/2.0/.
]]
    
add_subdirectory(libCommonWidgets)
add_subdirectory(libObjectTree)
add_subdirectory(libPropertyBrowser)
add_subdirectory(libRamsesWidgets)
add_subdirectory(libStyle)
add_subdirectory(libTimeAxis)
add_subdirectory(libProperty)
add_subdirectory(libAnimation)
add_subdirectory(libCurve)
add_subdirectory(libNodeLogic)
add_subdirectory(libSignal)
add_subdirectory(libMaterialLogic)
add_subdirectory(libDataConvert)
